--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "swiggy",
   "version": "1.0.0",
   "description": "A store to order food",
-
   "scripts": {
     "test": "jest",
     "start": "parcel index.html",
@@ -16,6 +15,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   }
 }
